etc/ip6tables.conf
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:ICMPv6 - [0:0]
-A INPUT -p ipv6-icmp -j ICMPv6
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -m udp -d fe80::/64 --dport 546 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 2377 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -m udp --dport 4789 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 7946 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -m udp --dport 7946 -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
-A ICMPv6 -p icmpv6 -m icmp6  --icmpv6-type echo-request -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type destination-unreachable -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type packet-too-big -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type time-exceeded -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type parameter-problem -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type router-solicitation -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type router-advertisement -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type neighbour-solicitation -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type neighbour-advertisement -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type redirect -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 141 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 142 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 148 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 149 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 130 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 131 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 132 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 143 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 151 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 152 -s fe80::/10 -j ACCEPT
-A ICMPv6 -p icmpv6 -m icmp6 --icmpv6-type 153 -s fe80::/10 -j ACCEPT
-A ICMPv6 -j RETURN
COMMIT
